fixed scrollbar problem

--- a/styles/main.css
+++ b/styles/main.css
@@ -339,6 +339,21 @@ a.blue-link:active {
 	color: #d2e3fd;
 }
 
+div::-webkit-scrollbar {
+	width: 20px;
+}
+
+div::-webkit-scrollbar-track {
+	background-color: rgba(28, 37, 53, .5);
+}
+
+div::-webkit-scrollbar-thumb {
+    background-color: #3d5174;
+    border: 7px solid transparent;
+    border-radius: 9px;
+    background-clip: content-box;
+}
+
 .ui-grid-header-viewport {
 	background-color: #1c2535 !important;
 }
